--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
         body {
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
+            overflow: hidden;
             background: #1a1a2e;
             font-family: Arial, sans-serif;
+            width: 100vw;
+            height: 100vh;
         }
         #game-container {
-            border: 2px solid #16213e;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            width: 100%;
+            height: 100%;
+            position: relative;
         }
         .score-display {
-            position: absolute;
+            position: fixed;
             top: 20px;
             color: white;
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+            z-index: 1000;
+            pointer-events: none;
         }
         #p1-score {
             left: 20px;
@@ -35,11 +37,22 @@
             right: 20px;
             color: #2196F3;
         }
+        .fullscreen-hint {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 14px;
+            z-index: 1000;
+            pointer-events: none;
+        }
     </style>
 </head>
 <body>
     <div id="p1-score" class="score-display">P1: 0</div>
     <div id="p2-score" class="score-display">P2: 0</div>
+    <div class="fullscreen-hint">Press F for fullscreen</div>
     <div id="game-container"></div>
     <script type="module" src="/src/main.js"></script>
 </body>
